--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import { Contact } from '../components/Contact';
 				<header>
 					<nav>
 						<ul>
-							<li>
+							<!-- <li>
 								<a href="#projects">Mes réalisations</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="#contact">Me contacter</a>
 							</li>
@@ -25,7 +25,7 @@ import { Contact } from '../components/Contact';
 						<img src="dev.png" class="img-dev" alt="Image de profil de Kerny LAGUERRE"/>
 						<h1>
 							Kerny LAGUERRE
-							<small>Developer FullStack</small>
+							<small>FullStack Developer</small>
 						</h1>
 						<p>
 							Développeur d'applications web responsive contribuant au développement digital de votre entreprise.
@@ -36,62 +36,89 @@ import { Contact } from '../components/Contact';
 		</section>
 		<section class="projects">
 			<div class="row">
-				<div class="languages">
-					<h2>
-						Solutions et technologies utilisées
+				<div class="projects-list">
+					<h2 class="title-section">
+						Mes réalisations
 					</h2>
-					<div class="row-languages">
+					<span class="hr"></span>
+					<div class="row-projects">
 						<a href="" class="col">
-							<img src="/technologies/typescript.png" alt="logo Typescript" />
+							<img src="/image-svgrepo-com.png" />
+							<div>
+							   <h3>Rody Donation</h3>
+							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
+							</div>
 						</a>
 						<a href="" class="col">
-							<img src="/technologies/php.png" alt="logo php">
+							<img src="/image-svgrepo-com.png" />
+							<div>
+							   <h3>Rody Network</h3>
+							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
+							</div>
 						</a>
 						<a href="" class="col">
-							<img src="https://www.linaro.org/generated/assets/images/content/windows_on_arm/mysql-400-94821c.png" alt="logo mysql">
+							<img src="/image-svgrepo-com.png" />
+							<div>
+							   <h3>Tour of Heroes</h3>
+							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
+							</div>
 						</a>
 						<a href="" class="col">
-							<img src="https://algotrading101.com/learn/wp-content/uploads/2022/09/vultr.webp" alt="logo vultr">
-						</a>
-						<a href="" class="col">
-							<img src="https://neo7.fr/wp-content/uploads/2018/01/symfony-logo.png" alt="logo symfony">
-						</a>
-						<a href="" class="col">
-							<img src="/technologies/structure.png" alt="logo reactJs">
-						</a>
-						<a href="" class="col">
-							<img src="https://pbs.twimg.com/profile_images/1237085354768961537/kt4ZC8Kj_400x400.jpg" alt="logo firstheberg">
-						</a>
-						<a href="" class="col">
-							<img src="/technologies/cloudflare.png " alt="logo cloudflare">
-						</a>
-						<a href="" class="col">
-							<img src="https://www.edureka.co/blog/wp-content/uploads/2019/05/logo.png" alt="logo nodejs">
-						</a>
-						<a href="" class="col">
-							<img src="https://repvue.imgix.net/a9yxc48y3ay5dm2udzwizc2bdyph" alt="logo MongoDB">
+							<img src="/image-svgrepo-com.png" />
+							<div>
+							   <h3>Kerny LAGUERRE Portfolio</h3>
+							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
+							</div>
 						</a>
 					</div>
 				</div>
-				<div class="projects-list">
-					<h2>
-						Mes réalisations
+				<div class="languages">
+					<h2 class="title-section">
+						Solutions et technologies utilisées
 					</h2>
-					<div class="row-projects">
+					<span class="hr"></span>
+					<div class="row-languages">
 						<a href="" class="col">
-							<img src="https://static.wikia.nocookie.net/6d37f599-6b4a-4053-b2f3-be1bb11109ce" /> Rody Donation
+							<img src="/technologies/typescript-svgrepo-com.png" alt="logo Typescript" />
 						</a>
 						<a href="" class="col">
-							<img src="https://static.wikia.nocookie.net/6d37f599-6b4a-4053-b2f3-be1bb11109ce" /> Rody Donation
+							<img src="/technologies/php-svgrepo-com.png" alt="logo php">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/mysql-logo-svgrepo-com.png" alt="logo mysql">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/vultr-svgrepo-com.png" alt="logo vultr">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/symfony-svgrepo-com.png" alt="logo symfony">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/react-javascript-js-framework-facebook-svgrepo-com.png" alt="logo reactJs">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/cloudflare-svgrepo.png " alt="logo cloudflare">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/nodejs-logo-svgrepo-com.png" alt="logo nodejs">
+						</a>
+						<a href="" class="col">
+							<img src="/technologies/mongodb-logo-svgrepo-com.png" alt="logo MongoDB">
 						</a>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="contact">
+		<section id="contact" class="contact">
 			<div>
-				<h2>Me contacter</h2>
+				<h2 class="title-section">Mes réseaux professionels</h2>
+				<span class="hr"></span>
+				<a href=""><img src="/socials/github-repo-git-octocat-svgrepo-com.png" alt="réseaux social Linkedin" /></a>
+				<a href=""><img src="/socials/linkedin-svgrepo-com.png" alt="réseaux social Github" /></a>
 				<!-- Composant React formulaire de contact -->
+				<p>
+					Vous souhaitez développer une application web pour votre entreprise ou pour vous même. Saissisez votre adresse électronique pour rentrez en contact avec moi !
+				</p>
 				<Contact client:visible />
 			</div>
 		</section>
