--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,11 +25,13 @@ const { title } = Astro.props;
 	@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600&display=swap');
 
 	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		--green: #21E484;
 	}
 
 	/* Reset CSS default Rules */
+	* {
+		box-sizing: border-box;
+	}
 	p{
 		margin: 0;
 		padding: 0;
@@ -42,10 +44,12 @@ const { title } = Astro.props;
 	li{
 		display: inline-block;
 	}
-	a {
+	a {   
 		color: inherit;
 		text-decoration: none;
+		transition: .3s;
 	}
+ 
 
 
 	/* CSS Layout style */
@@ -96,12 +100,13 @@ const { title } = Astro.props;
 	}
 
 	.me-1 > header {
-		max-width: 600px;
+		max-width: 1000px;
 		margin: 0 auto;
 	}
 	.me-1 > header > nav > ul {
 		display: flex;
 		justify-content: space-between;
+		justify-content: end;
 	}
 	.me-1 > header > nav > ul > li > a {
 		display: inline-block;
@@ -113,9 +118,6 @@ const { title } = Astro.props;
 		box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 		font-weight: 500;
 		font-size: .6em;
-	}
-	.me-1 > header > nav > ul > li > a:hover {
-		opacity: .7;
 	}
 
 	.me-1 > div {
@@ -167,6 +169,7 @@ const { title } = Astro.props;
 	.projects > .row {
 		display: flex;
 		flex-wrap: wrap;
+		gap: 5em;
 	}
 	.projects > .row > div {
 		flex: 1 0 100%;
@@ -174,54 +177,50 @@ const { title } = Astro.props;
 	}
 	.projects > .row > .languages > .row-languages {
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-column-gap: 15px;
-		grid-row-gap: 15px;
-		grid-template-rows: minmax();
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: auto;
+		justify-items:center;
 	}
 	.projects > .row > .languages > .row-languages > .col {
-		text-align: center;
 		height: 6em;
-		font-size: .7em;
-		border-radius: .2em;
 		overflow: hidden;
-		position: relative;
+		padding: .75em;
 	}
 	.projects > .row > .languages > .row-languages > .col > img {
 		width: 100%;
 		height: 100%;
-		object-fit: contain;
-		top: 0;
-		left: 0;
-		position: absolute;
-		z-index: -1;
 	}
 
 	.projects > .row > .projects-list > .row-projects {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-column-gap: 15px;
-		grid-row-gap: 15px;
-		grid-template-rows: minmax();
+		grid-gap: 8em;
 	}
 	.projects > .row > .projects-list > .row-projects > .col {
-		text-align: center;
-		height: 6em;
 		font-size: .9em;
 		font-weight: 500;
-		text-transform: uppercase;
-		border-radius: .2em;
 		overflow: hidden;
 		padding: 0 1em;
 		display: flex;
-		align-items: center;
-		gap: 1em;
+		align-items: start;
+		gap: 1.5em;
+	}
+	.projects > .row > .projects-list > .row-projects > .col:nth-child(2n) {
+		justify-content: right;
+		flex-direction: row-reverse;
 	}
 	.projects > .row > .projects-list > .row-projects > .col > img {
+		transform: translateY(2em);
 		width: 5em;
-		height: 5em;
-		object-fit: cover;
-		border-radius: 50%;
+		height: auto;
+		object-fit: contain;
+	}
+	.projects > .row > .projects-list > .row-projects > .col > div > h3 {
+		text-transform: uppercase;
+	}
+	.projects > .row > .projects-list > .row-projects > .col > div > span {
+		font-weight: 400;
+		font-size: .9em;
 	}
 
 
@@ -233,6 +232,45 @@ const { title } = Astro.props;
 		padding: 1em;
 		margin: 0 auto;
 		max-width: 600px;
+		text-align: center;
+	}
+
+	.contact > div > p {
+		font-size: .8em;
+	}
+
+	.contact > div > a > img {
+		width: 4em;
+	}
+
+	.title-section {
+		text-transform: uppercase;
+		margin: .5em 0;
+		font-size: 1.5em;
+		font-weight: 600;
+	}
+
+	.hr {
+		width: 6em;
+		height: .3em;
+		display: block;
+		background-color: #000;
+		margin-bottom: 1em;
+	}
+	.contact > div > .hr {
+		margin: 0 auto 2em auto;
+	}
+	.hr::after {
+		content: "";
+		display: block;
+		position: relative;
+		top: .3em;
+		width: 4em;
+		height: .6em;
+		background-color: var(--green);
+	}
+	.contact > div > .hr::after {
+		margin: 0 auto;
 	}
 
 	@media screen and (min-width: 500px) {
@@ -249,33 +287,47 @@ const { title } = Astro.props;
 			height: 8em;
 			width: 8em;
 			grid-row: 1 / span 2;
+			align-self: center;
 		}
 		.me-1 > div > div > p {
 			grid-column: 2 / 4;
 			text-align: left;
 			padding: .5em;
 		}
+
+		.projects > .row > .projects-list > .row-projects > .col {
+			gap: 3em;
+		}
 	}
 
 	@media screen and (min-width: 1000px) {
 		.projects {
-			max-width: 1200px;
+			max-width: 1000px;
 		}
 
 		.projects > .row {
 			gap: 10%;
+			flex-direction: row-reverse;
 		}
 
 		.projects > .row > div:first-child {
-			flex: 1 0 70%;
+			flex: 1 0 65%;
 		}
 
 		.projects > .row > div:last-child {
-			flex: 1 0 20%;
+			flex: 1 0 25%;
 		}
 
 		.projects > .row > .languages > .row-languages {
-			grid-template-columns: repeat(6, 1fr);
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+
+		.projects > .row > .projects-list > .row-projects {
+			padding: 2em;
+		}
+
+		.projects > .row > .projects-list > .row-projects > .col {
 		}
 
 	}
