--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,28 +43,28 @@ import { Contact } from '../components/Contact';
 					<span class="hr"></span>
 					<div class="row-projects">
 						<a href="" class="col">
-							<img src="/image-svgrepo-com.png" />
+							<img src="/website-page-web-svgrepo-com.png" />
 							<div>
 							   <h3>Rody Donation</h3>
 							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
 							</div>
 						</a>
 						<a href="" class="col">
-							<img src="/image-svgrepo-com.png" />
+							<img src="/website-page-web-svgrepo-com.png" />
 							<div>
 							   <h3>Rody Network</h3>
 							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
 							</div>
 						</a>
 						<a href="" class="col">
-							<img src="/image-svgrepo-com.png" />
+							<img src="/website-page-web-svgrepo-com.png" />
 							<div>
 							   <h3>Tour of Heroes</h3>
 							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
 							</div>
 						</a>
 						<a href="" class="col">
-							<img src="/image-svgrepo-com.png" />
+							<img src="/website-page-web-svgrepo-com.png" />
 							<div>
 							   <h3>Kerny LAGUERRE Portfolio</h3>
 							   <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ad recusandae architecto aut tempore fugit totam. Pariatur dolor, culpa eaque incidunt quis, doloremque nisi, quidem sint voluptates cupiditate illo quae!</span>
