--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,7 +1,18 @@
+:root {
+    --green: #21E484;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+.form-contact {
+    margin: 2em 0;
+}
+
 .form-contact > div {
     display: flex;
     align-items: stretch;
-    margin: 2em 0;
     background: #FFF;
     border-radius: .4em;
     overflow: hidden;
@@ -27,3 +38,132 @@
 .form-contact > div > button:hover {
     opacity: .8;
 }
+
+.form-contact > .text-code {
+    font-size: .75em;
+    margin-bottom: 1em;
+    line-height: 1.5em;
+}
+
+.form-code {
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-code > div > input,
+.form-code > div > button {
+    flex: 0 0 40%;
+}
+
+.form-message > div {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1.5em 0;
+}
+
+.text-message {
+    text-align: left;
+    margin-bottom: 1em;
+    font-size: .9em;
+}
+
+.form-message > div > input,
+.form-message > div > textarea,
+.form-message > div > button,
+.form-message > div > p {
+    flex: 0 0 90%;
+}
+
+.form-message {
+    max-width: 600px;
+}
+
+.form-message > div > input {
+    font-size: .85em;
+    padding: .75em .5em;
+    margin-bottom: .75em;
+    border-radius: .4em;
+    background:rgba(0,0,0,0.025);
+}
+
+.form-message > div > input:nth-child(1) {
+    font-weight: 600;
+}
+
+
+.form-message > div > textarea {
+    border: none;
+    font-size: .85em;
+    padding: .75em;
+    line-height: 2em;
+    margin-bottom: .75em;
+    height: 20em;
+    border-radius: .4em;
+    background:rgba(0,0,0,0.025);
+}
+
+.form-message > div > button {
+    border-radius: .4em;
+}
+
+.loading {
+    margin: 3em;
+}
+
+.lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: var(--green);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
+  
