--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,25 +4,31 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Découvrez le portfolio de Kerny LAGUERRE, développeur full stack junior passionné de nouvelles technologies. Explorez ses projets innovants et son expertise technique dans le monde du développement web." />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet"> 
+		<meta name="author" content="Kerny LAGUERRE" />
+		<meta property="twitter:card" content="summary" />
+		<meta property="og:title" content="Portfolio Kerny Laguerre Développeur Full Stack" />
+		<meta property="og:url" content="https://rody.bio" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="fr_FR" />
+		<meta property="og:description" content="Découvrez le portfolio de Kerny LAGUERRE, développeur full stack junior passionné de nouvelles technologies. Explorez ses projets innovants et son expertise technique dans le monde du développement web." />
+		<meta property="og:image" content="images" />
+		<link rel="icon" type="image/x-icon" href="/logo-2.png" />
 		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
+
 <style is:global>
 	:root {
 		--green: #21E484;
@@ -51,10 +57,9 @@ const { title } = Astro.props;
 	}
  
 
-
 	/* CSS Layout style */
 	html {
-		font-family: Inter, sans-serif;
+		font-family: ui-sans-serif, system-ui;
 		background-color: #F6F6F6;
 		min-height: 100vh;
 	}
@@ -64,12 +69,7 @@ const { title } = Astro.props;
 		margin: 0;
 	}
 	main {
-		min-height: 100vh;
 		padding: 0 !important;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
 
 	.me {
@@ -97,16 +97,16 @@ const { title } = Astro.props;
 		height: 100%;
 	}
 
-	.me-1 > header {
+	.me-1 > .menu {
 		max-width: 1000px;
 		margin: 0 auto;
 	}
-	.me-1 > header > nav > ul {
+	.me-1 > .menu > nav > ul {
 		display: flex;
 		justify-content: space-between;
 		justify-content: end;
 	}
-	.me-1 > header > nav > ul > li > a {
+	.me-1 > .menu > nav > ul > li > a {
 		display: inline-block;
 		padding: 1em;
 		margin: 1em;
@@ -118,13 +118,13 @@ const { title } = Astro.props;
 		font-size: .6em;
 	}
 
-	.me-1 > div {
+	.me-1 > div:last-child {
 		position: absolute;
 		width: 100%;
 		bottom: 1em;
 	}
 
-	.me-1 > div > div {
+	.me-1 > div:last-child > div {
 		max-width: 600px;
 		margin: 0 auto;
 		padding: 1em;
@@ -133,17 +133,20 @@ const { title } = Astro.props;
 		grid-template-rows: auto;
 	}
 
-	.me-1 > div > div > h1 {
+	.me-1 > div:last-child > div > h1 {
 		font-size: 1.3em;
 		margin: 0.5em;
 		font-weight: 600;
 		align-self: center;
 	}
-	.me-1 > div > div > h1 > small {
+	.me-1 > div:last-child > div > h1 > span {
+		font-weight: 600;
+	}
+	.me-1 > div:last-child > div > h1 > small {
 		display: block;
 		font-weight: 400;
 	}
-	.me-1 > div > div > p {
+	.me-1 > div:last-child > div > p {
 		font-weight: 100;
 		padding: 1em;
 		grid-column: 1 / 4;
@@ -151,6 +154,7 @@ const { title } = Astro.props;
 	}
 
 	.me-1 > div > div > .img-dev {
+	background-color: #FFF;
 		width: 80px;
 		height: 80px;
 		object-fit: cover;
@@ -160,10 +164,8 @@ const { title } = Astro.props;
 	}
 
 
-
-
 	.projects {
-		padding: 1em;
+		padding: 2em 2em 0em;
 		margin: 0 auto;
 		max-width: 600px;
 		background-color: #F9F9F9;
@@ -171,7 +173,7 @@ const { title } = Astro.props;
 	.projects > .row {
 		display: flex;
 		flex-wrap: wrap;
-		gap: 5em;
+		gap: 1em;
 	}
 	.projects > .row > div {
 		flex: 1 0 100%;
@@ -193,21 +195,20 @@ const { title } = Astro.props;
 		text-align: center;
 	}
 	.projects > .row > .languages > .row-languages > .col > img {
-		width: 90%;
+		width: 75%;
 	}
 
 	.projects > .row > .projects-list > .row-projects {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-gap: 4em;
+		grid-gap: 1em;
 	}
-
-
 
 
 
 	.contact {
 		background: #E3E3E3;
+		padding-bottom: 3em;
 	}
 	.contact > div{
 		padding: 1em;
@@ -233,7 +234,7 @@ const { title } = Astro.props;
 
 	.hr {
 		width: 8em;
-		height: .3em;
+		height: .2em;
 		display: block;
 		background-color: #000;
 		margin-bottom: 1em;
@@ -245,7 +246,7 @@ const { title } = Astro.props;
 		content: "";
 		display: block;
 		position: relative;
-		top: .3em;
+		top: .2em;
 		width: 4em;
 		height: .6em;
 		background-color: var(--green);
@@ -261,26 +262,28 @@ const { title } = Astro.props;
 			height: 60vh;
 		}
 
-		.me-1 > div > div {
+		.me-1 > div:last-child > div {
 			grid-row: 2fr;
 		}
-		.me-1 > div > div > .img-dev {
+		.me-1 > div:last-child > div > .img-dev {
 			margin: 0 1.3em;
 			height: 8em;
 			width: 8em;
 			grid-row: 1 / span 2;
 			align-self: center;
 		}
-		.me-1 > div > div > p {
+		.me-1 > div:last-child > div > p {
 			grid-column: 2 / 4;
 			text-align: left;
 			padding: .5em;
 		}
 
 		.projects > .row > .languages > .row-languages > .col > img {
-			width: 50%;
+			width: 60%;
 		}
-
+		.projects > .row > .languages > .row-languages {
+			grid-template-columns: repeat(4, 1fr);
+		}
 
 		.links-of-project > a {
 			padding: 1em 1.5em;
@@ -319,10 +322,6 @@ const { title } = Astro.props;
 		}
 		.projects > .row > .languages > .row-languages > .col > img {
 			width: 65%;
-		}
-
-		.projects > .row > .projects-list > .row-projects {
-			padding: 2em;
 		}
 
 		.links-of-project > a {
